<resources>

    <string-array name="array_home_pager_title">
        <item>直播</item>
        <item>推荐</item>
        <item>番剧</item>
        <item>分区</item>
        <item>关注</item>
        <item>发现</item>
    </string-array>

    <string-array name="array_bili_detail_pager_title">
        <item>简介</item>
        <item>评论</item>
    </string-array>

    <string-array name="array_home_bangumi_title">
        <item>新番推荐</item>
        <item>国产动画</item>
        <item>月新番</item>
        <item>番剧推荐</item>
    </string-array>


    <string-array name="array_home_bangumi_title_more">
        <item>所有连载</item>
        <item>更多</item>
        <item>分季列表</item>
    </string-array>

    <string-array name="array_home_partition_title">
        <item>直播</item>
        <item>番剧</item>
        <item>动画</item>

        <item>音乐</item>
        <item>舞蹈</item>
        <item>游戏</item>

        <item>科技</item>
        <item>生活</item>
        <item>鬼畜</item>

        <item>时尚</item>
        <item>广告</item>
        <item>娱乐</item>

        <item>电影</item>
        <item>电视剧</item>
        <item>游戏中心</item>
    </string-array>

    <string-array name="array_offline_cache_spinner">
        <item>按标题</item>
        <item>按时间</item>
        <item>按剧集</item>

    </string-array>



    <string name="app_name">VM-BiliBili</string>
    <string name="action_settings">Settings</string>
    <string name="SplashActivity_copyright">Copyright © 2016-XXXX Doing</string>
    <string name="default_uesrname">嘎哦瞄</string>
    <string name="default_userlevel">LV5</string>
    <string name="default_user_style">正式会员</string>
    <string name="default_uesr_coin">硬币：</string>
    <string name="menu_home">主页</string>
    <string name="menu_download">离线缓存</string>
    <string name="menu_collection">我的收藏</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_wallet">我的钱包</string>
    <string name="menu_follow_with_interest">关注的人</string>
    <string name="menu_color_lens">主题选择</string>
    <string name="menu_shop">应用推荐</string>
    <string name="menu_setting">设置与帮助</string>
    <string name="action_game">游戏</string>
    <string name="game_center">游戏</string>
    <string name="action_download">下载</string>
    <string name="action_search">查询</string>
    <string name="hot_recommend_title">正在直播</string>
    <string name="hot_recommend_rank">排行榜</string>
    <string name="hot_recommend_changitem">换一拨推荐</string>
    <string name="playing_live">正在直播</string>
    <string name="look_at_more">查看更多</string>
    <string name="playing_live_click_refresh">条新状态，点击刷新！</string>
    <string name="playing_live_current_start">当前</string>
    <string name="playing_live_current_end">个直播</string>
    <string name="bangumi_recommend_title">番剧推荐</string>
    <string name="more">更多</string>
    <string name="animate_recommend_title">动画区</string>
    <string name="more_animate">更多动画</string>
    <string name="go_and_see">进去看看</string>
    <string name="topic_recommend_title">话题</string>
    <string name="topic_center">话题中心</string>
    <string name="activity_recommend_title">活动中心</string>
    <string name="new_bangumi_title">新番连载</string>
    <string name="seeing">在看</string>
    <string name="refresh_to">更新至第</string>
    <string name="episode">话</string>
    <string name="animation_recommand">番剧推荐</string>
    <string name="onloading">加载中...</string>
    <string name="loading_finish">再怎么找也没有了</string>
    <string name="login">登录</string>
    <string name="action_forget_pass">忘记密码?</string>
    <string name="search_tags_title">大家都在搜</string>
    <string name="see_more">查看更多</string>
    <string name="close_flow_tag">收起</string>
    <string name="group_intreasting">兴趣圈</string>
    <string name="original_rank_center">原创排行中心</string>
    <string name="all_rank_center">全区排行中心</string>
    <string name="live_recommend">推荐主播</string>
    <string name="attention_anchor">关注主播</string>
    <string name="living_center">直播中心</string>
    <string name="living_search">搜索直播</string>
    <string name="all_partion">全部分类</string>
    <string name="toolbar_spinner">按标题</string>
    <string name="setting_offline">离线设置</string>
    <string name="debug">测试</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="share">分享</string>
    <string name="throw_coin">投硬币</string>
    <string name="collection">收藏</string>
    <string name="add_attention">+关注</string>


</resources>
