<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.activity.MainActivity">


    <item
        android:id="@+id/action_game"
        android:orderInCategory="100"
        android:icon="@drawable/ic_toolbar_menu_game"
        android:title="@string/action_game"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:icon="@drawable/ic_toolbar_menu_download"
        android:title="@string/action_download"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_toolbar_menu_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
</menu>
