<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <TextView
        android:id="@+id/LivingRecommendItem_header_tv"
        style="@style/TextStyle_16sp"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_head_live"
        android:padding="5dp"
        android:text="@string/live_recommend"
        />


    <TextView
        android:id="@+id/LivingRecommendItem_header_tv_current_live"
        style="@style/TextStyle_default"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_gray_arrow_right"
        android:drawablePadding="3dp"
        android:padding="8dp"
        android:text="@string/playing_live_current_end"
        />


    <com.doing.bilibili.ui.widget.GridViewFactoryView
        android:id="@+id/LivingRecommendItem_body1_cvf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LivingRecommendItem_header_tv"
        android:layout_marginTop="5dp"
        android:columnCount="2"
        android:rowCount="4"
        app:gridSize="7"
        />

    <com.doing.bilibili.ui.widget.GridViewFactoryView
        android:id="@+id/LivingRecommendItem_body2_cvf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LivingRecommendItem_body1_cvf"
        android:layout_marginTop="3dp"
        android:columnCount="2"
        android:rowCount="3"
        />

    <Button
        android:id="@+id/LivingRecommendItem_footer_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/LivingRecommendItem_body2_cvf"
        android:text="@string/look_at_more"
        />

    <LinearLayout
        android:id="@+id/LivingRecommendItem_footer_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/LivingRecommendItem_body2_cvf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/LivingRecommendItem_footer_tv"
            style="@style/TextStyle_12sp"
            android:text="@string/playing_live_click_refresh"
            />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/LivingRecommendItem_refresh_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
</RelativeLayout>