<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/BiliDetailSummaryFragment_header_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:maxLines="2"
        android:padding="5dp"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        android:layout_marginLeft="10dp"
        >

        <TextView
            android:id="@+id/BiliDetailSummaryFragment_header_tv_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_play_black"
            android:textColor="@color/dark_gray"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/BiliDetailSummaryFragment_header_tv_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_leave_message"
            android:textColor="@color/dark_gray"
            android:textSize="13sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/BiliDetailSummaryFragment_header_tv_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/dark_gray"
        android:layout_marginRight="20dp"
        android:textSize="13sp"
        />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <com.doing.bilibili.ui.BiliDetailFunctionView
            android:id="@+id/BiliDetailSummaryFragment_header_ll_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:titleText="@string/share"
            app:src="@drawable/ic_share_green"
            app:amountColor="@color/green"
            />

        <com.doing.bilibili.ui.BiliDetailFunctionView
            android:id="@+id/BiliDetailSummaryFragment_header_ll_coin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:titleText="@string/throw_coin"
            app:src="@drawable/ic_coin"
            app:amountColor="@color/yellow"
            />

        <com.doing.bilibili.ui.BiliDetailFunctionView
            android:id="@+id/BiliDetailSummaryFragment_header_ll_collection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:titleText="@string/collection"
            app:src="@drawable/ic_collect"
            app:amountColor="@color/pink"
            />

        <com.doing.bilibili.ui.BiliDetailFunctionView
            android:id="@+id/BiliDetailSummaryFragment_header_ll_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:titleText="@string/action_download"
            app:src="@drawable/ic_download"
            app:amountColor="@color/blue"
            />

    </LinearLayout>


</merge>