<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <LinearLayout
        android:id="@+id/RecommendHotItem_header_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        >

        <ImageView
            android:id="@+id/RecommendHotItem_header_iv_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_category_promo"
            />

        <TextView
            android:id="@+id/RecommendHotItem_header_tv_title"
            style="@style/TextStyle_16sp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/hot_recommend_title"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/RecommendHotItem_header_ll_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/shape_hot_recommend_rank_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_header_indicator_rank"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/hot_recommend_rank"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <com.doing.bilibili.ui.widget.GridViewFactoryView
        android:id="@+id/RecommendHotItem_body_cvf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RecommendHotItem_header_ll"
        android:layout_marginTop="5dp"
        android:columnCount="2"
        android:rowCount="2"
        />

    <LinearLayout
        android:id="@+id/RecommendHotItem_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RecommendHotItem_body_cvf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/RecommendHotItem_footer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_recommend_changitem"
            />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/RecommendHotItem_footer_iv_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
</RelativeLayout>